Sync all content

--- a/content/resources/cc-s10s07.md
+++ b/content/resources/cc-s10s07.md
@@ -4,7 +4,7 @@ description: Costume design for Feste (the clown/fool) from Shakespeare's Twelft
   Night, created for the Federal Theatre Project under the Works Progress Administration.
   Graphite and watercolor by Robert Byrne (1935). Image courtesy of the Library of
   Congress, Federal Theatre Project Collection, W.P.A. Transfer [159.7].
-file: /media/courses/cc-s10-prohibition-and-permission-spring-2007/7dd059c22fd19733e92b4b324b46d5a4_cc-s10s07.jpg
+file: /courses/cc-s10-prohibition-and-permission-spring-2007/7dd059c22fd19733e92b4b324b46d5a4_cc-s10s07.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Costume design for Feste (the clown/fool) from Shakespeare's _Twelfth Night_,
@@ -21,3 +21,5 @@ resourcetype: Image
 title: Costume design for Feste
 uid: 7dd059c2-2fd1-9733-e92b-4b324b46d5a4
 ---
+Costume design for Feste (the clown/fool) from Shakespeare's Twelfth Night, created for the Federal Theatre Project under the Works Progress Administration. Graphite and watercolor by Robert Byrne (1935). Image courtesy of the Library of Congress, Federal Theatre Project Collection, W.P.A. Transfer [159.7].
+
