Sync all content

--- a/content/resources/cc-s10s07.md
+++ b/content/resources/cc-s10s07.md
@@ -4,14 +4,15 @@ description: Costume design for Feste (the clown/fool) from Shakespeare's Twelft
   Night, created for the Federal Theatre Project under the Works Progress Administration.
   Graphite and watercolor by Robert Byrne (1935). Image courtesy of the Library of
   Congress, Federal Theatre Project Collection, W.P.A. Transfer [159.7].
+draft: false
 file: /ol-ocw-studio-app/courses/cc-s10-prohibition-and-permission-spring-2007/7dd059c22fd19733e92b4b324b46d5a4_cc-s10s07.jpg
 file_size: 93090
 file_type: image/jpeg
 image_metadata:
-  caption: Costume design for Feste (the clown/fool) from Shakespeare's _Twelfth Night_,
+  caption: Costume design for Feste (the clown/fool) from Shakespeare's *Twelfth Night*,
     created for the Federal Theatre Project under the Works Progress Administration.
     Graphite and watercolor by Robert Byrne (1935). (Image courtesy of the Library
-    of Congress, [Federal Theatre Project Collection](http://rs6.loc.gov/ammem/fedtp/fthome.html),
+    of Congress, [Federal Theatre Project Collection](https://www.loc.gov/collections/federal-theatre-project-1935-to-1939/about-this-collection/),
     W.P.A. Transfer \[159.7\].)
   credit: Image courtesy of the Library of Congress, Federal Theatre Project Collection,
     W.P.A. Transfer \[159.7\]
@@ -22,5 +23,15 @@ ocw_type: OCWImage
 resourcetype: Image
 title: Costume design for Feste
 uid: 7dd059c2-2fd1-9733-e92b-4b324b46d5a4
+video_files:
+  archive_url: ''
+  video_captions_file: ''
+  video_thumbnail_file: ''
+  video_transcript_file: ''
+video_metadata:
+  video_speakers: ''
+  video_tags: ''
+  youtube_description: ''
+  youtube_id: ''
 ---
 Costume design for Feste (the clown/fool) from Shakespeare's Twelfth Night, created for the Federal Theatre Project under the Works Progress Administration. Graphite and watercolor by Robert Byrne (1935). Image courtesy of the Library of Congress, Federal Theatre Project Collection, W.P.A. Transfer [159.7].
